syntax = "proto3";

package api_gateway;

message UserResponse {
  string username = 1;
  string email = 2;
  string id = 3;
  string createdAt = 5;
  string updatedAt = 6;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UserIdRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
}

service ApiGatewayService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc DeleteUser(UserIdRequest) returns (UserResponse);
  rpc GetUserById(UserIdRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}


